--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4029,5 +4029,35 @@
         <target>Hidden statuses</target>
       </segment>
     </unit>
+    <unit id="Sn2_Qth" name="Ranking-Ausschluss zurücknehmen">
+      <notes>
+        <note category="german">Ranking-Ausschluss zurücknehmen</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Ranking-Ausschluss zurücknehmen</source>
+        <target>Undo ranking exclusion</target>
+      </segment>
+    </unit>
+    <unit id="F9LAKy6" name="Diese Stadt aus dem Ranking ausschließen">
+      <notes>
+        <note category="german">Diese Stadt aus dem Ranking ausschließen</note>
+        <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig;twig:///templates/ajax/soul/view_town_content.html.twig</note>
+      </notes>
+      <segment>
+        <source>Diese Stadt aus dem Ranking ausschließen</source>
+        <target>Exclude town from ranking</target>
+      </segment>
+    </unit>
+    <unit id="VVx9Eja" name="Ranking-Eintrag">
+      <notes>
+        <note category="german">Ranking-Eintrag</note>
+        <note category="from">twig:///templates/ajax/admin/towns/old_town_explorer.html.twig</note>
+      </notes>
+      <segment>
+        <source>Ranking-Eintrag</source>
+        <target>Ranking Entry</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
