--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -3911,5 +3911,15 @@
         <target>This entry has been removed from the ranking.</target>
       </segment>
     </unit>
+    <unit id="vv_dKqx" name="Bürger, Willkommen in der Hölle!">
+      <notes>
+        <note category="german">Bürger, Willkommen in der Hölle!</note>
+        <note category="from">twig:///templates/ajax/ghost/donate.html.twig</note>
+      </notes>
+      <segment>
+        <source>Bürger, Willkommen in der Hölle!</source>
+        <target>Welcome to hell, citizen!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
