--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3881,5 +3881,16 @@
         <target>Dieser Eintrag wurde aus dem Ranking gestrichen.</target>
       </segment>
     </unit>
+    <unit id="vv_dKqx" name="Bürger, Willkommen in der Hölle!">
+      <notes>
+        <note category="german">Bürger, Willkommen in der Hölle!</note>
+        <note category="from">twig:///templates/ajax/ghost/donate.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Bürger, Willkommen in der Hölle!</source>
+        <target>Bürger, Willkommen in der Hölle!</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
