--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -3271,7 +3271,7 @@
       </notes>
       <segment>
         <source>Bevorzugte Pronomen</source>
-        <target>preferencia de pronombre</target>
+        <target>Preferencia de pronombre</target>
       </segment>
     </unit>
     <unit id="z8t41lP">
