--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -3867,7 +3867,7 @@
       </notes>
       <segment>
         <source>Diese Stadt wurde aus dem Ranking ausgeschlossen.</source>
-        <target>Diese Stadt wurde aus dem Ranking ausgeschlossen.</target>
+        <target>Esta ciudad fue excluida del ranking.</target>
       </segment>
     </unit>
     <unit id="7kH99Rl" name="Dieser Eintrag wurde aus dem Ranking gestrichen.">
@@ -3878,7 +3878,7 @@
       </notes>
       <segment>
         <source>Dieser Eintrag wurde aus dem Ranking gestrichen.</source>
-        <target>Dieser Eintrag wurde aus dem Ranking gestrichen.</target>
+        <target>Esta entrada ha sido eliminada del ranking.</target>
       </segment>
     </unit>
     <unit id="vv_dKqx" name="Bürger, Willkommen in der Hölle!">
@@ -3889,7 +3889,7 @@
       </notes>
       <segment>
         <source>Bürger, Willkommen in der Hölle!</source>
-        <target>Bürger, Willkommen in der Hölle!</target>
+        <target>Ciudadanos, ¡bienvenidos al infierno!</target>
       </segment>
     </unit>
   </file>
